--- a/add-project-based-on-milestone/action.yml
+++ b/add-project-based-on-milestone/action.yml
@@ -98,6 +98,7 @@ runs:
           // Find if the issue is already attached to the current project
           console.log(gitubIssue)
           const projectItem = gitubIssue.projectItems.nodes.find(item => item.project.id === projectId)
+          console.log(projectItem)
           core.info(`Project Item ID: ${projectItem !== undefined ? projectItem.id : 'Project not found'}`)
           if (projectItem === undefined && gitubIssue.milestone !== null) {
             // Issue is not attached to a project but is attached to a milestone
