--- a/.github/workflows/issue-chores.yml
+++ b/.github/workflows/issue-chores.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   projects-label:
     name: Projects on Labels
-    if: ${{ github.event_name == 'issues'}}
+    if: ${{ github.event.action == 'labeled' }}
     runs-on: ubuntu-latest
     steps:
       # Issue type is not available by default, this makes it available for if conditions
@@ -75,7 +75,7 @@ jobs:
 
   projects-milestone:
     name: Projects on Milestones
-    # if: ${{ github.event.action == 'milestoned' || github.event.action == 'demilestoned' }}
+    if: ${{ github.event.action == 'milestoned' || github.event.action == 'demilestoned' }}
     runs-on: ubuntu-latest
     steps:
       # Adds or removes the "Product Releases" project if a milestone is added
@@ -112,7 +112,7 @@ jobs:
       # Transfer issues between repositories of the Jahia org
       - name: Transfer Issue & Create Stub
         uses: Fgerthoffert/actions-transfer-issue@v1.0.0
-        if: github.event.action == "labeled"
+        if: ${{ github.event.action == 'labeled' }}
         with:
           token: ${{ secrets.GH_ISSUES_PRS_CHORES }}        
           router: "transfer:"
