--- a/.github/workflows/issue-chores.yml
+++ b/.github/workflows/issue-chores.yml
@@ -123,6 +123,7 @@ jobs:
     name: Links
     runs-on: ubuntu-latest
     needs: transfer
+    if: always()
     steps:
       # Create links in Jira to GitHub Issues
       # We still need to create a Jira User and update the server_host
