--- a/delivery/keep-issue-open/action.yml
+++ b/delivery/keep-issue-open/action.yml
@@ -147,17 +147,20 @@ runs:
 
             if (previousComment === undefined) {
               await github.graphql(`
-                mutation ($issueId: ID!) {
+                mutation ($issueId: ID! $body: String) {
                   addComment(input: {
-                    issueId: $issueId
+                    subjectId: $issueId
+                    body: body
                   }) {
-                    issue {
-                      id
-                    }
+                    clientMutationId
                   }
                 }
                 `,
-                { issueId: issueId }
+                { issueId: issueId, body: commentMsg }
               )
             }
+            core.info('Added a comment with error code: ${errorCode} in issue with ID: ${issueId}')
+          } else {
+            core.info('Found a previous comment with error code: ${errorCode} in issue with ID: ${issueId}')
+            core.info(JSON.stringify(previousComment))
           }
