--- a/delivery/keep-issue-open/action.yml
+++ b/delivery/keep-issue-open/action.yml
@@ -161,5 +161,5 @@ runs:
               core.info('Added a comment with error code: ${errorCode} in issue with ID: ${issueId}')
             } else {
               core.info('Found a previous comment with error code: ${errorCode} in issue with ID: ${issueId}')
-              core.info(JSON.stringify(previousComment))
+              core.info(JSON.stringify(previousComment)
             }
