--- a/delivery/keep-issue-open/action.yml
+++ b/delivery/keep-issue-open/action.yml
@@ -101,7 +101,7 @@ runs:
               let after = null
               let hasNextPage = true
               while (hasNextPage) {
-                core.info('Paginating through comments in issue: ${issueId} after: ${after}')
+                core.info(`Paginating through comments in issue: ${issueId} after: ${after}`)
                 const githubIssueNodeComments = await github.graphql(`
                   query issue($issueId: ID! $after: String) {
                     node(id: $issueId) {
